workin on the website links and files
Former-commit-id: 7d5ec63242be12439a628f327d712f5a4f5c9d0c [formerly 88e5d144068eb32df2fdd8a14f7c5a67177255c5] [formerly caab43d002ddedd29a924b0c6affd338a7770ea2 [formerly 2317460444a08f0f8dcb602e60a0d707df0bd7e3]]
Former-commit-id: 933e06932620e452782c59bc8027156deb11411e [formerly 0d356e12c5bfb84e95f216089ee0e3a301da7d25]
Former-commit-id: 8316b97b6e995c7dbd5e0ccf6ec1e885ab3233c3

--- a/templates/new_web_site/chrome.html
+++ b/templates/new_web_site/chrome.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)https://www.google.dz/drive/download/ -->
 <html class=" google-js js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-    <script type="text/javascript" async="" src="/static/new_web_site/google_drive_files/ga.js"></script><script>
-(function(H){H.className=H.className.replace(/\bgoogle\b/,'google-js')})(document.documentElement)
-    </script>
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <meta content="Get 15GB of free cloud storage today and keep your life connected by downloading Google Drive for your smartphone, tablet, and computer." name="description">
-    <meta content="Download Google Drive - Free Cloud Storage" property="og:title">
+    <meta content="With just one click you can automatically add a new lead from LinkedIn to ioGrow. No need to spend time on data entry. Focus on what matters: serving your customers and closing more deals." name="description">
+    <meta content="ioGrow chrome extension - Smoothly integration with LinkedIn, Twitter and Gmail" property="og:title">
     <meta content="//www.google.com/drive/images/drive/logo-drive.png" property="og:image">
-    <meta content="Get 15GB of free cloud storage today and keep your life connected by downloading Google Drive for your smartphone, tablet, and computer." property="og:description">
+    <meta content="With just one click you can automatically add a new lead from LinkedIn to ioGrow. No need to spend time on data entry. Focus on what matters: serving your customers and closing more deals." property="og:description">
     <title>
-      Download Google Drive - Free Cloud Storage
+      ioGrow chrome extension - Smoothly integration with LinkedIn, Twitter and Gmail
     </title>
     <script src="/static/new_web_site/google_drive_files/google.js">
 </script>
-    <script>
-var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCopy","/apps/"]);_gaq.push(["_cookiePathCopy","/work/"]);_gaq.push(["_cookiePathCopy","/work/apps/business/"]);_gaq.push(["_cookiePathCopy","/intl/"]);_gaq.push(["_cookiePathCopy","/intx/"]);_gaq.push(["_cookiePathCopy","/work/"]);new gweb.analytics.AutoTrack({profile:"UA-28613865-1"});
-    </script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
-    <link href="https://www.google.com/drive/download/" rel="canonical">
-    <link href="https://www.google.dz/drive/css/site.min.css" rel="stylesheet">
+    <link href="/static/new_web_site/google_drive_files/site.min.css" rel="stylesheet">
     <script src="/static/new_web_site/google_drive_files/modernizr.js">
 </script>
-    <link href="https://www.google.dz/drive/images/drive/favicon.ico" rel="shortcut icon">
+    <link href="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.ico" rel="shortcut icon">
     <script type="text/javascript">
   (function() {
     var po = document.createElement('script');
