--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
 <!-- saved from url=(0029)https://www.google.com/drive/ -->
 <html class=" google-js js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-    <script type="text/javascript" async="" src="/static/new_web_site/google_drive_files/ga.js"></script><script>
-(function(H){H.className=H.className.replace(/\bgoogle\b/,'google-js')})(document.documentElement)
-    </script>
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <meta content="Get access to files anywhere through secure cloud storage and file backup for your photos, videos, files and more with Google Drive." name="description">
-    <meta content="Google Drive - Cloud Storage &amp; File Backup for Photos, Docs &amp; More" property="og:title">
+    <meta content="Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them." name="description">
+    <meta content="ioGrow - Discover new customer, get organized and grow your business" property="og:title">
     <meta content="//www.google.com/drive/images/drive/logo-drive.png" property="og:image">
-    <meta content="Get access to files anywhere through secure cloud storage and file backup for your photos, videos, files and more with Google Drive." property="og:description">
+    <meta content="Collect Leads from Twitter, LinkedIn and Gmail" property="og:description">
     <title>
       ioGrow - Discover new customers, Get organized and Grow your Business
     </title>
-    <script src="/static/new_web_site/google_drive_files/google.js">
-</script>
-    <script>
-var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCopy","/apps/"]);_gaq.push(["_cookiePathCopy","/work/"]);_gaq.push(["_cookiePathCopy","/work/apps/business/"]);_gaq.push(["_cookiePathCopy","/intl/"]);_gaq.push(["_cookiePathCopy","/intx/"]);_gaq.push(["_cookiePathCopy","/work/"]);new gweb.analytics.AutoTrack({profile:"UA-28613865-1"});
-    </script>
-    <meta content="D93199779C0B5EE436644DE888FCC272" name="msvalidate.01">
-    <link href="https://plus.google.com/+GoogleDrive/" rel="publisher">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
-    <link href="/static/new_web_site/google_drive_files/google_drive.html" rel="canonical">
-    <link href="https://www.google.com/drive/css/site.min.css" rel="stylesheet">
+    <link href="/static/new_web_site/google_drive_files/site.min.css" rel="stylesheet">
     <script src="/static/new_web_site/google_drive_files/modernizr.js">
 </script>
-    <link href="https://www.google.com/drive/images/drive/favicon.ico" rel="shortcut icon">
+    <link href="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.ico" rel="shortcut icon">
     <style type="text/css">
     .heading{
       font-size: 48px;
@@ -46,23 +34,23 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
         <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" height="50"></a>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
-        <img alt="Drive logo" src="/static/new_web_site/google_drive_files/logo-drive.png">
+        <img alt="Drive logo" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
         <ul>
           <li>
-            <a class="meet" data-g-action="Header" data-g-event="Drive" data-g-label="Meet Drive" href="/static/new_web_site/google_drive_files/google_drive.html">Getting started with ioGrow</a>
+            <a class="meet" data-g-action="Header" data-g-event="Drive" data-g-label="Meet Drive" href="/welcome/">Getting started with ioGrow</a>
           </li>
           <li>
             <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="/chrome-extension/">Install Chrome Extension</a>
           </li>
           <li class="mobile-is-hidden device-is-hidden">
-            <a class="download" data-g-action="Header" data-g-event="Drive" data-g-label="Download" href="/new/#pricing">Pricing</a>
+            <a class="download" data-g-action="Header" data-g-event="Drive" data-g-label="Download" href="/welcome/#pricing">Pricing</a>
           </li>
           <li>
-            <a class="work" data-g-action="Header" data-g-event="Drive" data-g-label="For Work" href="/new-sign-in/">
+            <a class="work" data-g-action="Header" data-g-event="Drive" data-g-label="For Work" href="/sign-in">
             Sign-in</a>
           </li>
           <li class="mobile-is-hidden float-in">
-            <a class="go-to-drive get-started" data-g-action="Header" data-g-event="Drive" data-g-label="Go to ioGrow" href="/new-sign-in/">
+            <a class="go-to-drive get-started" data-g-action="Header" data-g-event="Drive" data-g-label="Go to ioGrow" href="/sign-in">
             Go to ioGrow</a>
           </li>
           <li class="download-app mobile-is-visible crushed-is-visible">
@@ -79,7 +67,7 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
       </div>
     </header>
     <section class="section-intro section-panel-fullscreen js-fullscreen" style="height: 682px; opacity: 1;">
-      <div class="section-photo-fullscreen section-photo js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-origin="0" data-preserve-aspect-ratio="false" data-reverse-parallax="true" data-src="images/home/intro.jpg" style="height: 882px; background-image: url(https://www.google.com/drive/images/home/intro-1600.jpg);"></div>
+      <div class="section-photo-fullscreen section-photo js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-origin="0" data-preserve-aspect-ratio="false" data-reverse-parallax="true" data-src="images/home/intro.jpg" style="height: 882px; background-image: url(http://storage.googleapis.com/iogrow-gs/intro-1600.jpg);"></div>
       <div class="section-centered section-vertical-align js-vertical-align js-parallax-image" data-origin="0" data-parallax-fade="true" data-parallax-speed="3" data-reverse-parallax="true" style="margin-top: -133.5px; opacity: 1;">
         <div class="one-whole">
           <img alt="Drive logo logo-heading" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
@@ -89,7 +77,7 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
           <div class="mobile-is-visible mobile-button-selector">
             <a class="maia-button button-download download-mobile-android" href="https://play.google.com/store/apps/details?id=com.google.android.apps.docs&hl=en">Download
             Google Drive</a> <a class="maia-button button-download download-mobile-ios" href="https://itunes.apple.com/en/app/google-drive/id507874739">Download Google Drive</a>
-            <a class="maia-button button-download download-mobile get-started" href="/new-sign-in/" style="display: inline-block;">
+            <a class="maia-button button-download download-mobile get-started" href="/sign-in" style="display: inline-block;">
             Go to ioGrow</a>
           </div>
         </div>
@@ -114,7 +102,7 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
               <p class="section-body allow-orphan">
                 Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them. 
               </p>
-              <a class="maia-button button-download download-mobile get-started" href="https://accounts.google.com/ServiceLogin?service=wise&passive=true&continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&urp=https%3A%2F%2Fwww.google.com%2Fdrive%2Fusing-drive%2F" style="display: inline-block;">
+              <a class="maia-button button-download download-mobile get-started" href="/sign-in" style="display: inline-block;">
             Start discovering new customers on ioGrow</a>
             </div>
           </div>
@@ -136,7 +124,7 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
               <p class="section-body">
                  With just one click you can automatically add a new lead from LinkedIn to ioGrow. No need to spend time on data entry. Focus on what matters: serving your customers and closing more deals.
               </p>
-              <a class="maia-button button-download download-mobile get-started" href="https://accounts.google.com/ServiceLogin?service=wise&passive=true&continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&urp=https%3A%2F%2Fwww.google.com%2Fdrive%2Fusing-drive%2F" style="display: inline-block;">
+              <a class="maia-button button-download download-mobile get-started" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" style="display: inline-block;" target="_blank">
             Install ioGrow Chrome extension</a>
             </div>
           </div>
@@ -168,7 +156,7 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
               Get started with ioGrow <br> it’s free for 30 days <br>
 
             </h1>
-            <a class="maia-button button-download download-mobile get-started" href="/new-sign-in/" style="display: inline-block;">
+            <a class="maia-button button-download download-mobile get-started" href="/sign-in" style="display: inline-block;">
             Start your free trial</a>
           </div>
         </div>
@@ -188,12 +176,12 @@ California, 94040,
           </li>
             <li>
             
-                 <a href="mailto:contact@iogrow.com">Email us</a>, or join us on Twitter <a href="#">@ioGrow</a>, <a href="#">Facebook</a>
+                 <a href="mailto:contact@iogrow.com">Email us</a>, or join us on Twitter <a href="https://twitter.com/iogrow">@ioGrow</a>, <a href="https://www.facebook.com/iogrow">Facebook</a>
             
             </li>
            
             <li>
-              <a href="#">ioGrow Blog</a>
+              <a href="http://blog.iogrow.com/">ioGrow Blog</a>
             </li>
             <li>
               <a href="#">Terms of service</a>
