--- a/templates/new_web_site/sign-in.html
+++ b/templates/new_web_site/sign-in.html
@@ -4,7 +4,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <meta content="Get 15GB of free cloud storage today and keep your life connected by downloading Google Drive for your smartphone, tablet, and computer." name="description">
+    <meta content="Discover new customer, get organized and grow your business" name="description">
     <meta content="ioGrow Sign in - Discover new customer, get organized and grow your business" property="og:title">
     <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" property="og:image">
     <meta content="Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them." property="og:description">
