fixing the new integration of discovery with google compute engine
Former-commit-id: 87db574d224e156b962d9d7e1c5f31706f9ce656 [formerly 6e90684706e7fd27386dca17564d168dd0b98371] [formerly b066dde4e9a38794e1039e9e39d2b4fbc8af7f00 [formerly fe8973a4a4a3036e1988f67a37f0c23cc9cf2e41]]
Former-commit-id: bf0e81a72c5563920fd5f64e4f25bca285d0d01b [formerly d426bd85c23b38864783f9fdbdb87a79110afe74]
Former-commit-id: cea4c3878e8c9e0c0a3eed2ae764782407815d98

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -228,7 +228,7 @@
               <div class="pic">
                       <a href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)"   target="new" class="startup-link" title="account.name">
                 
-                          <img href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)" target="new" class="img-responsive profile-photo" src="<%=tweet.profile_image_url %>">
+                          <img href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)" target="new" class="img-responsive profile-photo" src="<%=tweet.profile_image %>">
                       </a>
               </div>
               <div class="text">
@@ -277,7 +277,7 @@
             </div>
           </div>
         </div>
-        <div class="cardElement loaderCard" ng-show="isMoreItemLoading" data-span="all">
+        <div class="cardElement loaderCard" ng-show="isLoadingtweets" data-span="all">
           <div class="loaderCardContent">
              <img class="img-responsive " src="/static/img/gloader.gif">
              <span>  Loading...</span>
