--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -1,5 +1,3 @@
-
-
 <div class="row subHeader">
     <div class="currentApp">
        <div class="btn-group">
@@ -228,7 +226,8 @@
               <div class="pic">
                       <a href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)"   target="new" class="startup-link" title="account.name">
                 
-                          <img href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)" target="new" class="img-responsive profile-photo" src="<%=tweet.profile_image %>">
+                          <img href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-show="tweet.profile_image" ng-click="details_of_tweets(tweet.id)" target="new" class="img-responsive profile-photo" src="<%=tweet.profile_image %>">
+                          <img href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" ng-show="tweet.profile_image_url" ng-click="details_of_tweets(tweet.id)" target="new" class="img-responsive profile-photo" src="<%=tweet.profile_image_url %>">
                       </a>
               </div>
               <div class="text">
@@ -251,7 +250,7 @@
               </div>
               <div class="pitch">
                 <span  class="contact-title" >
-                  <%=fromNow(tweet.created_at)%>
+                 <!--  <%=fromNow(tweet.created_at)%> -->
                 </span>
               </div>
          
