--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <meta content="Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them." name="description">
     <meta content="ioGrow - Discover new customer, get organized and grow your business" property="og:title">
-    <meta content="//www.google.com/drive/images/drive/logo-drive.png" property="og:image">
+    <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" property="og:image">
     <meta content="Collect Leads from Twitter, LinkedIn and Gmail" property="og:description">
     <title>
       ioGrow - Discover new customers, Get organized and Grow your Business
@@ -24,26 +24,24 @@
       height: 125px;
       margin: 0 auto 20px auto;
       }
+    .try-iogrow{
+      padding-left: 50px;
+      padding-right: 50px;
+    }
     </style>
   </head>
   <body class="index nav-light">
     <header class="header" role="banner">
       <div class="header-item with-site-logo">
         <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
-        data-g-label="Drive logo" href="../drive/">
+        data-g-label="Drive logo" href="/welcome/">
         <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" height="50"></a>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
         <img alt="Drive logo" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
         <ul>
           <li>
-            <a class="meet" data-g-action="Header" data-g-event="Drive" data-g-label="Meet Drive" href="/welcome/">Getting started with ioGrow</a>
-          </li>
-          <li>
             <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="/chrome-extension/">Install Chrome Extension</a>
-          </li>
-          <li class="mobile-is-hidden device-is-hidden">
-            <a class="download" data-g-action="Header" data-g-event="Drive" data-g-label="Download" href="/welcome/#pricing">Pricing</a>
           </li>
           <li>
             <a class="work" data-g-action="Header" data-g-event="Drive" data-g-label="For Work" href="/sign-in">
@@ -51,13 +49,7 @@
           </li>
           <li class="mobile-is-hidden float-in">
             <a class="go-to-drive get-started" data-g-action="Header" data-g-event="Drive" data-g-label="Go to ioGrow" href="/sign-in">
-            Go to ioGrow</a>
-          </li>
-          <li class="download-app mobile-is-visible crushed-is-visible">
-            <a class="download-mobile-android boxed-in" data-g-action="Header" data-g-event="Drive" data-g-label="Download for Android" href="https://play.google.com/store/apps/details?id=com.google.android.apps.docs&hl=en">Download
-            for Android</a> <a class="download-mobile-ios boxed-in" data-g-action="Header" data-g-event="Drive" data-g-label="Download for iOS" href="https://itunes.apple.com/en/app/google-drive/id507874739">Download for iOS</a>
-            <a class="download-mobile boxed-in get-started" data-g-action="Header" data-g-event="Drive" data-g-label="Sign In" href="https://accounts.google.com/ServiceLogin?service=wise&passive=true&continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&urp=https%3A%2F%2Fwww.google.com%2Fdrive%2Fusing-drive%2F" style="display: inline-block;">
-            Sign In</a>
+            Try ioGrow</a>
           </li>
         </ul>
       </nav>
@@ -73,12 +65,10 @@
           <img alt="Drive logo logo-heading" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
           <h1 class="section-headline section-headline-large section-headline-white heading">
             Discover new cusotmers, Get organized and Grow your Business
-          </h1><a class="maia-button button-download mobile-is-hidden get-started" href="/new-sign-in/">Go to ioGrow</a>
+          </h1><a class="maia-button button-download mobile-is-hidden get-started try-iogrow" href="/new-sign-in/">Try ioGrow</a>
           <div class="mobile-is-visible mobile-button-selector">
-            <a class="maia-button button-download download-mobile-android" href="https://play.google.com/store/apps/details?id=com.google.android.apps.docs&hl=en">Download
-            Google Drive</a> <a class="maia-button button-download download-mobile-ios" href="https://itunes.apple.com/en/app/google-drive/id507874739">Download Google Drive</a>
-            <a class="maia-button button-download download-mobile get-started" href="/sign-in" style="display: inline-block;">
-            Go to ioGrow</a>
+            <a class="maia-button button-download download-mobile get-started try-iogrow" href="/sign-in" style="display: inline-block;">
+            Try ioGrow</a>
           </div>
         </div>
       </div>
