--- a/templates/new_web_site/sign-up.html
+++ b/templates/new_web_site/sign-up.html
@@ -4,7 +4,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <meta content="Get 15GB of free cloud storage today and keep your life connected by downloading Google Drive for your smartphone, tablet, and computer." name="description">
+    <meta content="Discover new customer, get organized and grow your business" name="description">
     <meta content="ioGrow Sign in - Discover new customer, get organized and grow your business" property="og:title">
     <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" property="og:image">
     <meta content="Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them." property="og:description">
@@ -17,190 +17,12 @@
     <script src="/static/new_web_site/google_drive_files/modernizr.js">
 </script>
     <link href="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.ico" rel="shortcut icon">
-    <script type="text/javascript">
-  (function() {
-    var po = document.createElement('script');
-    po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://plus.google.com/js/client:plusone.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(po, s);
-  })();
-  </script>
-   <script src="/static/plugins/jquery-1.10.1.min.js"  type="text/javascript"></script>
-  <script src="/static/plugins/jquery-migrate-1.2.1.min.js"  type="text/javascript"></script>
-  <script type="text/javascript">
-  $( document ).ajaxStart(function() {
-       $('#loading').show();
-  });
-var helper = (function() {
-  var authResult = undefined;
-
-  return {
-    /**
-     * Hides the sign-in button and connects the server-side app after
-     * the user successfully signs in.
-     *
-     * @param {Object} authResult An Object which contains the access token and
-     *   other authentication information.
-     */
-    onSignInCallback: function(authResult) {
-      $('#authResult').html('Auth Result:<br/>');
-      console.log('*******************');
-      console.log(authResult);
-      if (typeof(Storage) != "undefined") {
-          localStorage['is_signed_in'] = true;
-          localStorage['access_token']=authResult.access_token;
-          localStorage['authResultexpiration'] = authResult.expires_at;
-      }
-      if (authResult['access_token']) {
-        // The user is signed in
-        this.authResult = authResult;
-        helper.connectServer();
-        // After we load the Google+ API, render the profile data from Google+.
-        //gapi.client.load('plus','v1',this.renderProfile);
-
-
-      } else if (authResult['error']) {
-        // There was an error, which means the user is not signed in.
-        // As an example, you can troubleshoot by writing to the console:
-        console.log('There was an error: ' + authResult['error']);
-        $('#authResult').append('Logged out');
-        $('#authOps').hide('slow');
-        $('#gConnect').show();
-      }
-      console.log('authResult', authResult);
-    },
-    /**
-     * Retrieves and renders the authenticated user's Google+ profile.
-     */
-    renderProfile: function() {
-      var request = gapi.client.plus.people.get( {'userId' : 'me'} );
-      request.execute( function(profile) {
-          $('#profile').empty();
-          if (profile.error) {
-            $('#profile').append(profile.error);
-            return;
-          }
-          $('#profile').append(
-              $('<p><img src=\"' + profile.image.url + '\"></p>'));
-          $('#profile').append(
-              $('<p>Hello ' + profile.displayName + '!<br />Tagline: ' +
-              profile.tagline + '<br />About: ' + profile.aboutMe + '</p>'));
-          if (profile.cover && profile.coverPhoto) {
-            $('#profile').append(
-                $('<p><img src=\"' + profile.cover.coverPhoto.url + '\"></p>'));
-          }
-        });
-      $('#authOps').show('slow');
-      $('#gConnect').hide();
-    },
-    /**
-     * Calls the server endpoint to disconnect the app for the user.
-     */
-    disconnectServer: function() {
-      // Revoke the server tokens
-      $.ajax({
-        type: 'POST',
-        url: window.location.href + '/disconnect',
-        async: false,
-        success: function(result) {
-          console.log('revoke response: ' + result);
-          $('#authOps').hide();
-          $('#profile').empty();
-          $('#visiblePeople').empty();
-          $('#authResult').empty();
-          $('#gConnect').show();
-        },
-        error: function(e) {
-          console.log(e);
-        }
-      });
-    },
-    /**
-     * Calls the server endpoint to connect the app for the user. The client
-     * sends the one-time authorization code to the server and the server
-     * exchanges the code for its own tokens to use for offline API access.
-     * For more information, see:
-     *   https://developers.google.com/+/web/signin/server-side-flow
-     */
-    connectServer: function() {
-      console.log(this.authResult.code);
-      var userId = '{{ID}}';
-      $.ajax({
-        type: 'POST',
-        url: '/gconnect',
-
-        success: function(result) {
-          console.log('i am in connectServer show me result please');
-          console.log(result);
-          if (result==true){
-             window.location.replace('/sign-up');
-          }
-          else{
-            window.location.replace('/');
-          }
-         // helper.people();
-        },
-
-
-
-        data: {code:this.authResult.code, id: userId}
-      });
-    },
-    /**
-     * Calls the server endpoint to get the list of people visible to this app.
-     */
-    people: function() {
-      $.ajax({
-        type: 'GET',
-        url: window.location.href + '/people',
-        contentType: 'application/octet-stream; charset=utf-8',
-        success: function(result) {
-          helper.appendCircled(result);
-        },
-        processData: false
-      });
-    },
-    /**
-     * Displays visible People retrieved from server.
-     *
-     * @param {Object} people A list of Google+ Person resources.
-     */
-    appendCircled: function(people) {
-      $('#visiblePeople').empty();
-
-      $('#visiblePeople').append('Number of people visible to this app: ' +
-          people.totalItems + '<br/>');
-      for (var personIndex in people.items) {
-        person = people.items[personIndex];
-        $('#visiblePeople').append('<img src="' + person.image.url + '">');
-      }
-    },
-  };
-})();
-
-/**
- * Perform jQuery initialization and check to ensure that you updated your
- * client ID.
- */
-
-function onSignInCallback(authResult) {
-  helper.onSignInCallback(authResult);
-}
-/**
- * Calls the helper method that handles the authentication flow.
- *
- * @param {Object} authResult An Object which contains the access token and
- *   other authentication information.
- */
-
-</script>
   </head>
   <body class="download nav-dark hoverable">
     <header class="header" role="banner">
       <div class="header-item with-site-logo">
         <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
-        data-g-label="Drive logo" href="../drive/">
+        data-g-label="Drive logo" href="/welcome/">
         <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" height="50"></a>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
@@ -252,12 +74,12 @@ California, 94040,
           </li>
             <li>
             
-                 <a href="mailto:contact@iogrow.com">Email us</a>, or join us on Twitter <a href="#">@ioGrow</a>, <a href="#">Facebook</a>
+                 <a href="mailto:contact@iogrow.com">Email us</a>, or join us on Twitter <a href="https://twitter.com/iogrow">@ioGrow</a>, <a href="https://www.facebook.com/iogrow">Facebook</a>
             
             </li>
            
             <li>
-              <a href="#">ioGrow Blog</a>
+              <a href="http://blog.iogrow.com/">ioGrow Blog</a>
             </li>
             <li>
               <a href="#">Terms of service</a>
