fix logo depixilised on welcome website
Former-commit-id: a659beed63071ec4e04d86e6f234270c2b9bdb54 [formerly 4f941e16b1cd24e828531d90f86e29e101e1fc3e] [formerly a24480a2439960539567cb5305fb2d0959103162 [formerly dada014a6d7cc0834a84451dd342dc5ec11d1bf1]]
Former-commit-id: 79a0ec2f5234631f939bd22bf27d121d0c0a54eb [formerly 5a9d323f2b35e9710452eb9bad4fe23e6f28372f]
Former-commit-id: 84187bd0644d0a6da7aac8bb35adc6a5adbc323a

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -35,7 +35,7 @@
       <div class="header-item with-site-logo">
         <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
         data-g-label="Drive logo" href="/welcome/">
-        <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" height="50"></a>
+        <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" ></a>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
         <img alt="Drive logo" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
