--- a/templates/new_web_site/chrome.html
+++ b/templates/new_web_site/chrome.html
@@ -24,7 +24,7 @@
       <div class="header-item with-site-logo">
         <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
         data-g-label="Drive logo" href="/welcome/">
-        <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" height="50"></a>
+        <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png"></a>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
         <img alt="Drive logo" src="/static/new_web_site/google_drive_files/logo-drive.png">
