invite new user , delete user invited
Former-commit-id: 75d970fc5e062ff8d42073c196b463340519c118 [formerly 5cd3be14b93f67d462fdf724a7227c145ffd25e8] [formerly 1aaca50a701f21017890e8bd82ad95bae94a2535 [formerly ef0f640a1f477077cec03730cb909ecbe6e36c12]]
Former-commit-id: 16b39f303aec5db501fba758c9eaf28ae7fbdcad [formerly 8a0ad67d2f6fd7ddbd676b79300fe57aa4c684bc]
Former-commit-id: 7e5ac2eb8e8f5ad79dec618f527eca9c0362193d

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -79,7 +79,7 @@
                   <label class="sr-only" for="exampleInputEmail2">Email</label>
                   <input type="email" class="form-control ng-pristine ng-invalid ng-invalid-required ng-valid-email" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter a email" required="">
               </div>
-              <button type="submit" class="btn red jfk-button jfk-button-action" ng-click="pushElement(email, emails, 'emails')">Invite</button>
+              <button type="submit" class="btn red jfk-button jfk-button-action" ng-click="inviteNewUser(email)">Invite</button>
               <button type="submit" ng-click="showInviteForm = false" class="btn btn-default">X</button>
           </form>
           <div class="conta" ng-hide="showInviteForm">
@@ -161,7 +161,7 @@
               </div>
        </div>
            <div class="showPage custom-show margin-bottom-15 col-md-12" ng-show="invitees">    
-              <button ng-class="{disabled: selected_invitees.length==0}" title=" Delete invitee " class="btn btn-sm btn-default task_action pull-right" ng-click="reopenTask()">
+              <button ng-class="{disabled: selected_invitees.length==0}" title=" Delete invitee " class="btn btn-sm btn-default task_action pull-right" ng-click="deleteInvitedUser()">
                   <i class="fa fa-trash-o"></i>
                   <span class="btn-text">
                       Delete invitee
