inserting google analytics tracker code
Former-commit-id: 6c66256364f391445abdc9fdc58a69ceab6f950f [formerly e3f7b6cbd1808225561ad3aea634cda461264e01] [formerly 463f845278c5bc3d71bdea655190a2f35d9a158e [formerly 97abaca42a45d6fd89ed57a0ce841933589408ea]]
Former-commit-id: ce42ea3929201612a4140452030f0affa4f15d97 [formerly 3a5261df33e69f8c1b3e3f9f16b61ce8be8b06f1]
Former-commit-id: 2a834c8af8516e41c269bf31f1ad39e6fcda140f

--- a/templates/new_web_site/sign-up.html
+++ b/templates/new_web_site/sign-up.html
@@ -17,6 +17,22 @@
     <script src="/static/new_web_site/google_drive_files/modernizr.js">
 </script>
     <link href="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.ico" rel="shortcut icon">
+    <script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+{%if user %}
+    console.log('1');
+    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
+    ga('send', 'pageview');
+{% else %}
+    console.log('2');
+    ga('create', 'UA-52188380-1', 'auto');
+    ga('send', 'pageview');
+{% endif %}
+
+</script>
   </head>
   <body class="download nav-dark hoverable">
     <header class="header" role="banner">
