--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -29,6 +29,24 @@
       padding-right: 50px;
     }
     </style>
+    <!-- Google Analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+{%if user %}
+    console.log('1');
+    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
+    ga('send', 'pageview');
+{% else %}
+    console.log('2');
+    ga('create', 'UA-52188380-1', 'auto');
+    ga('send', 'pageview');
+{% endif %}
+
+</script>
+<!-- End Google Analytics -->
   </head>
   <body class="index nav-light">
     <header class="header" role="banner">
