Disable link on the logo, sign-in, sign-up page, fix #1306
Former-commit-id: d6507220c446e9e180d7c088e22706191358a4b8 [formerly c8dd0224d878d17633cd9626d0b06de12e0662d4] [formerly 2f9ada851509184944d2cbdab2654970e02f71cf [formerly 60c8ac280e448140287601df20f67688bebde10b]]
Former-commit-id: e93d00a7be75936a5c543379aa81d26a7ca3aa9a [formerly a625a5840b6d9cb92832c52a202a99ea37ff48eb]
Former-commit-id: 64300e1f2e67eb0fe357db07b9193d009fc8da6a

--- a/templates/new_web_site/sign-in.html
+++ b/templates/new_web_site/sign-in.html
@@ -216,7 +216,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     <header class="header" role="banner">
       <div class="header-item with-site-logo">
         <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
-        data-g-label="Drive logo" href="/welcome/">
+        data-g-label="Drive logo" >
         <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png"></a>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
