--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -23,9 +23,9 @@
           <span role="button" class="filterItem" ng-click="runTheProcess();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Tweets')}} 
            </span>
           
-          <span role="button" class="filterItem"  ng-click="influencers();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
+          <!--span role="button" class="filterItem"  ng-click="influencers();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
           
-          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On')}}<span class="hidden-xs hiddenOnxs">{{ _('Maps')}}</span> </span>
+          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On')}}<span class="hidden-xs hiddenOnxs">{{ _('Maps')}}</span> </span-->
           
           
             <div class="btn-group visibleOnPhone">
