Correct error on slogan, add ioGrow to the sentence : install iogrow chrome extension
Former-commit-id: a9bb98b9c984d2319000442b41aa60f253af7f94 [formerly 971dc315d77318c1a4f4031b685b5cd8c1d78924] [formerly 4b76d73580900c61ab35c6ea877f040c03ef38fb [formerly a04d95435ce982df4d66208b200255b2410bf0f2]]
Former-commit-id: 716aafa7065f87a7db8b23cbf0985ea4ca96f860 [formerly cb2a9233ef72556a66d93ffa6bcbcfefe063e672]
Former-commit-id: 28946a2ce9e97a2e722047fb88b862db1a358b57

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -59,7 +59,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         <img alt="Drive logo" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png">
         <ul>
           <li>
-            <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="/chrome-extension/">Install Chrome Extension</a>
+            <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="/chrome-extension/">Install ioGrow Chrome Extension</a>
           </li>
           <li>
             <a class="work" data-g-action="Header" data-g-event="Drive" data-g-label="For Work" href="/sign-in">
@@ -82,7 +82,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         <div class="one-whole">
           <img alt="Drive logo logo-heading" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
           <h1 class="section-headline section-headline-large section-headline-white heading">
-            Discover new cusotmers, Get organized and Grow your Business
+            Discover new customers, Get organized and Grow your Business
           </h1><a class="maia-button button-download mobile-is-hidden get-started try-iogrow" href="/new-sign-in/">Try ioGrow</a>
           <div class="mobile-is-visible mobile-button-selector">
             <a class="maia-button button-download download-mobile get-started try-iogrow" href="/sign-in" style="display: inline-block;">
