updating the created_at show
Former-commit-id: de6aaeaef62fb1759d2bdd188040da3d8e2aa1dc [formerly f1c0edd2c5c630448b1b36d0b7d3aa7759e2c5f8] [formerly 1144c9c839bc71aa0f23e6f5dd8577c8d3d592ce [formerly b978e3334f978c2d4a00f75c245f71a200329669]]
Former-commit-id: 410d998b5c1bb0d8ea192621b102221df416fbb5 [formerly 276daba45dd97e132aac6860dc042c7c048449ab]
Former-commit-id: 5751da37057b9f532527ba47efdfcd2dd8bb1b97

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -250,7 +250,7 @@
               </div>
               <div class="pitch">
                 <span  class="contact-title" >
-                 <!--  <%=fromNow(tweet.created_at)%> -->
+                  <%=fromNow(tweet.created_at)%>
                 </span>
               </div>
          
