--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -62,7 +62,13 @@
       </div>
       </div>
     </div>
+    <div class="col-md-3"> 
+        <a class="pull-right" style="font-size: 16px;color: #737373;cursor: pointer;" ng-click="switchShow()"> 
+            <i class="fa fa-th-large" style=" padding-top: 6px; font-size: 20px;" ng-show="show=='list'"></i>
+            <i class="fa fa-list-ul" style=" padding-top: 6px; font-size: 20px;" ng-show="show=='cards'"></i>
+        </a>
     </div>
+   </div>
 </div>
 
 <div  class="page-content">
@@ -166,21 +172,51 @@
         <!-- BEGIN PAGE CONTENT-->
         <div class="row">
 <div class="col-md-12">
-<div class="row subHeaderContainer">
-   <div class=" col-md-9 col-sm-9 col-xs-9 subHeaderContent">
-      <div class="row">
-          <h2 class="page-title">{{ _("Accounts") }} </h2>
-     </div>
-  </div>
-  <div class="col-md-3 col-sm-3 col-xs-3">
-      <div class="row">
-        <div class="pull-right" >
-         <a href="/#/accounts/new" class="btn red newBtn">
-                       {{_('New Account')}}
-         </a>
+  <div class="row subHeaderContainer">
+  <div ng-show="accounts" class="task-actions taskCard list-group-item task-actions">
+       <div class="row">
+       <div class="col-md-12">
+         <form id="task_actions" class="form-inline" role="form">
+         <div class="row">
+         <label class="col-xs-1  col-md-1" style=" text-align: center; padding-left: 23px; ">
+             <input title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="allCardsSelected" ng-click="selectAll($event)">
+         </label>
+         <div class="col-xs-11 col-md-11" style=" padding-left:0px; ">
+           <button title="Reopen Task" class="btn btn-sm btn-default task_action" ng-click="reopenTask()" ng-class="{disabled: selectedCards.length==0}">
+          <i class="fa fa-unlock"></i>
+          <span class="btn-text">
+            Export
+          </span>
+          </button>
+          <button title="Add Tags" ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selectedCards.length==0}">
+          <i class="fa fa-tags"></i>
+           <span class="btn-text">
+            Tags
+           </span>
+          </button>
+         <!-- <button title="Assign someone to Task" ng-click="assigneeModal()" class="btn btn-sm btn-default task_action disabled" ng-class="{disabled: selected_tasks.length==0}">
+            <i class="fa fa-mail-forward"></i>
+             <span class="btn-text">
+            Send mail
+             </span>
+          </button>-->
+          <button title="Delete Task" ng-click="editbeforedeleteselection()" class="btn btn-sm btn-default task_action " ng-class="{disabled: selectedCards.length==0}">
+            <i class="fa fa-trash-o"></i>
+             <span class="btn-text">
+            Delete
+             </span>
+          </button>
+          <div class="pull-right" style=" margin-right: 10px; ">
+               <a href="/#/accounts/new" class="btn red newBtn" style=" margin-bottom: 0px; ">
+                  {{_('New Account')}}
+               </a>
+          </div>
+        </div>
+        
+          </div></form>
       </div>
-      </div>
-  </div>
+    </div>
+                </div>
 </div>
 <!-- <form action="/stripe" method="POST">
   <script
@@ -197,7 +233,7 @@
     <div class="row">
       <div class="tab-pane">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12" ng-show="show=='list'">
             <div class="table-responsive showPage">
                 <table class="table">
                 <thead>
@@ -208,23 +244,29 @@
                          Logo
                         </th>
                         <th>
-                          Name
+                          
+                           <a href="" ng-click="filterByName()"> {{ _(' Name')}}</a>
+                            <i class="fa fa-caret-up" ng-show="fltby == '-name'"></i>
+                            <i class="fa fa-caret-down" ng-show="fltby == 'name'"></i>
                         </th>
                         <th>
-                          Type
+                          
+                          <a href="" ng-click="fltby = 'account_type'; reverse=false"> {{ _(' Type')}}</a>
+                        </th>
+                        <th >
+                          
+                          <a href="" ng-click="fltby = 'industry'; reverse=false"> {{ _(' Industry')}}</a>
                         </th>
                         <th>
-                          Industry
-                        </th>
-                        <th>
-                          Last update
+                         
+                           <a href="" ng-click="fltby = 'updated_at'; reverse=false"> {{ _(' Last update')}}</a>
                         </th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="account in accounts" >
+                    <tr ng-repeat="account in accounts | orderBy:fltby:reverse" >
                         <td>
-                          <input title="Select all Users" type="checkbox" ng-checked=" user.is_admin" ng-click="">
+                          <input title="Select all Users" type="checkbox" ng-checked="isSelected(account)" ng-click="selectCardwithCheck($event,$index,account)">
                         </td>
                         <td>
                           <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">
@@ -254,7 +296,7 @@
                 </table>
             </div>
         </div>
-        <div class="col-md-12 waterfall" ng-hide="blankStateaccount">
+        <div class="col-md-12 waterfall" ng-hide="blankStateaccount" ng-show="show=='cards'" ng-click="unselectAll($event)" stop-event='click'>
             <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
               <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
               <ul class="list-group tags-list">
@@ -300,7 +342,7 @@
               </button>
             </div>
         </div>
-          <div ng-repeat="account in accounts"  droppable  id="card_<%=$index%>" class="cardElement" ng-drop="dropTag(account,$index)">
+          <div ng-repeat="account in accounts"  ng-click="selectCard($event,$index,account)" ng-class="{selectedCard: isSelected(account)}" droppable  id="card_<%=$index%>" class="cardElement" ng-drop="dropTag(account,$index)">
            <div class="btn-group inCardOptionsBtn">
             <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
              <i class="fa fa-ellipsis-vertical"></i>
@@ -319,15 +361,15 @@
             <div class="detailsSection" id="detailsId">
               <div class="head">
                 <div class="pic">
-                  <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name"><img ng-hide="account.logo_img_id" alt="account.name" class="img-resonsive img-thumbnail" src="/static/img/default_company.png" >
+                 <!-- <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">--><img ng-hide="account.logo_img_id" alt="account.name" class="img-resonsive img-thumbnail" src="/static/img/default_company.png" >
                   <img  ng-show="account.logo_img_id" alt="account.name" class="img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
-                  </a>
+                  <!--</a>-->
                 </div>
                 <div class="text">
                 <div class="name " >
-                    <a class="profile-link" href="/#/accounts/show/<%= account.id %>">
-                      <p class="fittext autoresizeName" max-heit="18" max-font-size="18" text="account.name"></p>
-                    </a>
+                    
+                      <a class="fittext autoresizeName" max-heit="18" href="/#/accounts/show/<%= account.id %>" max-font-size="18" text="account.name"></a>
+                    
                   </div>
                   <div class="pitch">
                     <span  ng-show="account.account_type">
@@ -455,6 +497,32 @@
   </div>
   </div>
 </div>
+
+<!-- before delete many accounts-->
+<div id="BeforedeleteSelectedAccounts" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel" class="modal-title">Delete Accounts</h3>
+            </div>
+            <div class="modal-body">
+                <form id="seletesho" name="deletesho" class="form-horizontal">
+                    <p ng-show="selectedCards.length > 1">{{_("Are you sure you want to delete")}} :  <%=selectedCards.length %> accounts .</p>
+                    <p ng-show="selectedCards.length==1">{{_("Are you sure you want to delete")}} :  <%=selectedCards[0].name %> .</p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+
+                <input  ng-click="deleteSelection()" type="submit" class="btn red" value="Delete this Account">
+                <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
+            </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!--     ****************************   -->
 <div id="BeforedeleteAccount" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -478,7 +546,7 @@
 </div>
 
       <!--assign tags model-->
-   <div id="assigneeTagsToTask" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+   <div id="assigneeTagsToAccount" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
             <div class="modal-header">
@@ -498,7 +566,7 @@
             </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <input ng-hide="isLoadingTask" ng-click="addTagsTothis()" type="submit" class="btn green" value="Add">
+                <input ng-hide="isLoadingTask" ng-click="addTagstoAccounts()" type="submit" class="btn green" value="Add">
                 <input ng-show="isLoadingTask" type="submit" class="btn green" value="Loading..." disabled>
               </div>
           </form>
